<resources>
    <string name="app_name">eaZYBOss</string>
    <string name="button_scan_etu">Scan carte étudiante</string>
    <string name="button_scan">Scan</string>
    <string name="text_scan_etu">Carte étudiante :</string>
    <string name="result_scan_etu">pas encore scannée</string>
    <string name="button_scan_prof">Scan carte prof</string>
    <string name="text_scan_prof">Carte prof :</string>
    <string name="result_scan_prof">pas encore scannée</string>
    <string name="button_scan_carte">Scan carte zybo</string>
    <string name="text_scan_carte">Carte ZYBO :</string>
    <string name="result_scan_carte">pas encore scannée</string>
    <string name="button_send">Envoyer</string>
    <string name="confirm_dialog">Envoi effectué avec succès</string>
    <string name="duree_1">1 semaines</string>
    <string name="duree_2">2 semaines</string>
    <string name="duree_3">1 mois</string>
    <string name="saved_token_date">fr.ensimag.eazyboss.PREFERENCE_TOKEN_KEY</string>
    <string name="saved_token_value">fr.ensimag.eazyboss.PREFERENCE_TOKENVALUE_KEY</string>
    <string name="saved_code">fr.ensimag.eazyboss.PREFERENCE_CODE_KEY</string>
    <string name="saved_login">fr.ensimag.eazyboss.PREFERENCE_LOGIN_KEY</string>
    <string-array name="duration_array">
        <item>1 semaine</item>
        <item>2 semaines</item>
        <item>1 mois</item>
    </string-array>

</resources>
